@@ -1,4 +1,4 @@
-/* $Id: drupal.css,v 1.63 2004/04/27 20:10:07 dries Exp $ */
+/* $Id: drupal.css,v 1.64 2004/05/05 18:19:21 dries Exp $ */
 
 /*
 ** HTML elements
@@ -288,7 +288,7 @@ td.menu-disabled {
   border-collapse: collapse;
   width: 100%;
 }
-.calendar td {
+.calendar td, .calendar th {
   text-align: center;
   border: 1px solid #000;
   padding: 1px;
